Footer's overlap with content corrected.

--- a/peopleflow/static/css/app.css
+++ b/peopleflow/static/css/app.css
@@ -1,3 +1,5 @@
+#root {margin-bottom: 0px}
+
 a.rfid_card span {
   display: none;
 }
